glx/testdata/valid/relationship-marriage.glx
relationships:
  rel-12345678:
    version: "1.0"
    type: marriage
    persons:
      - person-a1b2c3d4
      - person-b2c3d4e5
    participants:
      - person: person-a1b2c3d4
        role: spouse
      - person: person-b2c3d4e5
        role: spouse
    start_event: event-12345678
    description: "Marriage between John Smith and Mary Brown"
