glx/testdata/invalid/broken-references/relationships/rel-marriage.glx
relationships:
  rel-marriage-john-mary:
    type: marriage
    participants:
      - person: person-john-smith-1850
        role: spouse
      - person: person-mary-brown-1852
        role: spouse
    start_event: event-marriage-1875
    notes: "Marriage of John Smith and Mary Brown, May 10, 1875"
